# paa

./: .gitignore  README.md  refs.bib  slides.md
WalkSAT/results/: benchmark_dpll_results_20251013_000326.json  benchmark_dpll_results_20251013_192127.json  benchmark_dpll_results_20251114_212413.json  benchmark_dpll_results_20251114_212630.json  benchmark_dpll_results_20251114_222657.json  benchmark_dpll_results_20251114_234334.json  benchmark_dpll_results_20251208_091159.json  benchmark_iteratedlocalsearch_results_20251208_091155.json  benchmark_results_20251012_224851.json  benchmark_walksat_results_20251013_000334.json  benchmark_walksat_results_20251013_192219.json  benchmark_walksat_results_20251013_192526.json  benchmark_walksat_results_20251013_225711.json  benchmark_walksat_results_20251013_235049.json  benchmark_walksat_results_20251013_235122.json  benchmark_walksat_results_20251013_235226.json  benchmark_walksat_results_20251014_000011.json  benchmark_walksat_results_20251014_000505.json  benchmark_walksat_results_20251014_000510.json  benchmark_walksat_results_20251014_000757.json  benchmark_walksat_results_20251114_220244.json  benchmark_walksat_results_20251114_234343.json
WalkSAT/src/: compare_results_to_tex.py  individuals_result_to_tex.py  main.py  summary_comparison_table_to_tex.py  summary_table_to_tex.py
sat/: CMakeLists.txt  sat
sat/include/core/: Assignment.h  DPLLSolver.h  Formula.h  Solver.h
sat/include/utils/: CNFParser.h
sat/inputs/: 01.cnf
sat/src/: main.cpp
sat/src/core/: DPLLSolver.cpp
sat/src/utils/: CNFParser.cpp
(+60 files in other folders)
